--- a/css/index.css
+++ b/css/index.css
@@ -58,18 +58,19 @@ img {
   overflow: hidden;
   margin-left: 30px;
   margin-top: 60px;
+  display: flex;
+  justify-content: space-around;
 }
 #wrap .headerWrap .header .headerRight .register li {
   float: left;
-  width: 58px;
-  height: 15px;
-  line-height: 15px;
+  height: 20px;
+  width: 20px;
+  line-height: 20px;
   text-align: center;
-  font-size: 10px;
-  font-weight: bold;
 }
 #wrap .headerWrap .header .headerRight .register li a {
   color: #ffffff;
+  font-size: 20px;
 }
 #wrap .headerWrap .header .headerRight .search_input {
   margin-top: 10px;
