--- a/css/index.less
+++ b/css/index.less
@@ -56,16 +56,17 @@ img{
           overflow: hidden;
           margin-left: 30px;
           margin-top: 60px;
+          display: flex;
+          justify-content: space-around;
           li{
             float: left;
-            width: 58px;
-            height: 15px;
-            line-height: 15px;
+            height: 20px;
+            width: 20px;
+            line-height: 20px;
             text-align: center;
-            font-size: 10px;
-            font-weight: bold;
             a{
               color: #ffffff;
+              font-size: 20px;
             }
           }
         }
