--- a/css/myPage/myPage.less
+++ b/css/myPage/myPage.less
@@ -4,7 +4,9 @@
 }
 input{
     //outline: none;
+
 }
+//input[type="text"]:disabled{background-color:#fff;}
 a{
     text-decoration: none;
     cursor: pointer;
@@ -17,10 +19,6 @@ img{
 }
 @mainColor:#E0D03D;
 @mainWidth:1226px;
-.myMarginTL(){
-    margin-top: 40px;
-    margin-left: 100px;
-}
 
 
 #wrap{
@@ -62,16 +60,17 @@ img{
                     overflow: hidden;
                     margin-left: 30px;
                     margin-top: 60px;
+                    display: flex;
+                    justify-content: space-around;
                     li{
                         float: left;
-                        width: 58px;
-                        height: 15px;
-                        line-height: 15px;
+                        height: 20px;
+                        width: 20px;
+                        line-height: 20px;
                         text-align: center;
-                        font-size: 10px;
-                        font-weight: bold;
                         a{
                             color: #ffffff;
+                            font-size: 20px;
                         }
                     }
                 }
@@ -99,23 +98,30 @@ img{
 
         }
     }
-    
+
+    /*填充*/
+    .filling{
+        width: 100%;
+        height: 40px;
+        background-color: #E0D03D;
+    }
+
     /*我页*/
     .myWrap{
         width: 1226px;
-        height: 700px;
+        height: 600px;
         margin: 0 auto;
         overflow: hidden;
-        .myNav{
-            height: 700px;
+        .nav{
+            height: 600px;
+            width: 198px;
             float: left;
             border: 1px solid #DEDEDE;
-            .myNavTop{
+            .navUp{
                 display: flex;
                 flex-direction: column;
                 justify-content: space-around;
                 align-items: center;
-                width: 198px;
                 height: 200px;
                 img{
                     width: 100px;
@@ -128,9 +134,8 @@ img{
                     flex: 0.5;
                 }
             }
-            .myNavBot{
-                width: 198px;
-                height: 500px;
+            .navDown{
+                height: 400px;
                 ul{
                     text-align: center;
                     height: 100%;
@@ -147,8 +152,7 @@ img{
                         &.active{
                             width: 100px;
                             margin: 0 auto 25px auto;
-                            //border: 1px solid #DEDEDE;
-                            box-shadow: 5px 5px 4px 2px #E0D03D;
+                            box-shadow: 1px 1px 1px 1px #E0D03D;
                         }
 
                     }
@@ -158,39 +162,24 @@ img{
         }
 
 
-        .myContent{
-            float: right;
-            height: 700px;
-            border: 1px solid #DEDEDE;
-            .mySet{
-                .setTop{
-                    width: 1024px;
-                    height: 100px;
-                    border-bottom: 2px solid #DEDEDE;
-                    li{
-                        float: left;
-                        height: 100px;
-                        line-height: 100px;
-                        padding: 0 20px;
-
-                        a{
-                            color: #E0D03D;
-                            font-weight: bold;
-                            &:hover{
-                                opacity: 0.8;
-                            }
-                        }
-                    }
-                    .active{
-                        border-bottom: 5px solid #E0D03D;
-                    }
-                }
-                .setCon{
-                    padding-left: 20px;
+        .contentWrap{
+            float: left;
+            width: 1025px;
+            height: 600px;
+            border-right: 1px solid #DEDEDE;
+            .content{
+                position: relative;
+                margin-left: 200px;
+                .basicInfo{
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    //display: none;
                     .formTab{
                         .photoWrap{
                             width: 128px;
-                            margin-left: 150px;
+                            margin-top: 10px;
+                            margin-left: 90px;
                             .photo{}
                             .loadPhoto{
                                 position: relative;
@@ -205,42 +194,58 @@ img{
                                     top: 0;
                                     width: 100%;
                                     opacity: 0;
-
                                 }
                             }
                         }
                         .nickname{
-                            .myMarginTL();
+                            margin-top: 40px;
                             input{
                                 width: 400px;
                                 height: 30px;
-
+                                &:disabled{
+                                    background-color: white;
+                                    border: none;
+                                    font-weight: bold;
+                                }
                             }
                         }
                         .selectWrap{
-                            .myMarginTL();
+                            margin-top: 40px;
+                            margin-left: 6px;
                             .selects{
                                 width: 107px;
                                 height: 25px;
+                                &:disabled{
+                                    background-color: white;
+                                    border: none;
+                                }
                             }
                         }
                         .sex{
+                            margin-top: 40px;
+                            margin-left: 15px;
                             label{
                                 margin-right: 20px;
                             }
-                            .myMarginTL();
                         }
                         .signature{
                             margin-top: 40px;
-                            margin-left: 65px;
+                            margin-left: -3px;
                             textarea{
                                 width: 400px;
+                                height: 100px;
                                 resize: none;
                                 vertical-align: top;
+                                &:disabled{
+                                    background-color: white;
+                                    border: none;
+                                    font-weight: bold;
+                                    font-family: Arial;
+                                }
                             }
                         }
                         .save{
-                            margin-left: 500px;
+                            margin-left: 410px;
                             margin-top: 20px;
                             button{
                                 width: 50px;
@@ -255,11 +260,38 @@ img{
                         }
                     }
                 }
+
+                .postInfo{
+                    display: none;
+                    position: absolute;
+                    left: 0;
+                    top: 0;
+                    .postTop{
+                        margin-top: 40px;
+                        .add{
+                            width: 100px;
+                            height: 35px;
+                            background-color: #E0D03D;
+                            border: none;
+                            border-radius: 5px;
+                            font-weight: bold;
+                            color: white;
+                        }
+                    }
+                    .postList{
+                        margin-top: 40px;
+                        .postItem{
+                            width: 600px;
+                            height: 100px;
+                            border: 1px solid #DEDEDE;
+                        }
+                    }
+                }
+
             }
         }
 
     }
-
 
     /*底部*/
     .footerWrap{
@@ -267,7 +299,7 @@ img{
         background-color: @mainColor;
         .footer{
             width: @mainWidth;
-            margin: 0 auto 0;
+            margin: 50px auto 0;
             .footerTop{
                 padding-top: 30px;
                 border-bottom: 1px solid #d8cccc;
