--- a/css/index/index.less
+++ b/css/index/index.less
@@ -15,7 +15,8 @@ ul,li{
 img{
   display: block;
 }
-@mainColor:#E0D03D;
+//#f9ec75  #E0D03D
+@mainColor: #E0D03D;
 @mainWidth:1226px;
   #wrap{
     /*头部*/
@@ -103,6 +104,7 @@ img{
         display: flex;
         justify-content: space-between;
         width: @mainWidth;
+        height: 40px;
         margin: 0 auto;
         //padding: 5px 0;
         .navItem{
@@ -111,10 +113,10 @@ img{
             position: relative;
             .smallList{
               position: absolute;
-              top: 39px;
+              top: 40px;
               left: -10px;
               width: 114px;
-              height: 0px;
+              height: 0;
               overflow: hidden;
               padding: 10px;
               box-sizing: border-box;
@@ -129,7 +131,7 @@ img{
                 color: @mainColor;
                 font-size: 16px;
                 &:hover{
-                  color: #daa426;
+                  text-shadow: 2px 2px 1px #b18b26;
                 }
               }
 
@@ -141,6 +143,9 @@ img{
             font-weight: bold;
           }
           &:hover{
+            .text{
+              text-shadow: 3px 3px 3px #42630e;
+            }
             .itemCon{
               height: 355px;
               z-index: 5;
@@ -171,7 +176,6 @@ img{
               width: 114px;
               height: 300px;
               box-sizing: border-box;
-              //background: url("../img/gnb_arrow.jpg") right top no-repeat;
               a{
                 margin-left: 5px;
                 margin-top: 5px;
@@ -179,7 +183,7 @@ img{
                 color: @mainColor;
                 font-size: 16px;
                 &:hover{
-                  color: #daa426;
+                  text-shadow: 2px 2px 1px #b18b26;
                 }
               }
             }
@@ -190,8 +194,10 @@ img{
               a{
                 position: relative;
                 display: block;
+                overflow: hidden;
                 img{
                   width: 100%;
+                  transition: 1s;
                 }
                 span{
                   position: absolute;
@@ -212,18 +218,237 @@ img{
                   background-color: rgba(225,225,225,.4);
                   display: none;
                 }
-                &:hover .mask{
-                  display: block;
+                &:hover {
+                  .mask{
+                    display: block;
+                  }
+                  img{
+                    transform: scale(1.4) rotate(10deg);
+                  }
                 }
               }
             }
           }
-
-
-
-
         }
+      }
+    }
+    /*内容*/
+    .contentWrap{
+      width: 100%;
+      /*内容展示*/
+      .content{
+        width: @mainWidth;
+        margin: 70px auto;
+        h2{
+          font-weight: bold;
+          color: @mainColor;
+          font-size: 30px;
+        }
+        .contentList{
+          display: flex;
+          justify-content: space-between;
+          margin-top: 10px;
+          margin-bottom: 30px;
+          .contentItem{
+            margin-top: 5px;
+            .itemImg{
+              display: block;
+              width: 300px;
+              height: 300px;
+              overflow: hidden;
+              img{
+                width: 100%;
+                transition: 1s;
+              }
+              &:hover img{
+                transform: scale(1.1);
+              }
+            }
+            .itemDescribe{
+              margin-top: 5px;
+              :nth-child(1){
+                a{
+                  color: @mainColor;
+                  font-size: 25px;
+                  font-weight: bold;
+                  &:hover{
+                    text-decoration: underline;
+                  }
+                }
+              }
+              :nth-child(2){
+                font-size: 16px;
+              }
+              :nth-child(3){
+                font-size: 23px;
+                font-weight: bold;
+                color: @mainColor;
+                margin-top: 5px;
+                margin-bottom: 10px;
+              }
+              :nth-child(4){
+                overflow: hidden;
+                img{
+                  float: left;
+                  margin-right: 5px;
+                }
+              }
+            }
 
+          }
+        }
+      }
+      /*event*/
+      .event_box {
+        background:url("../../img/index/event.jpg") no-repeat center center fixed;
+        background-size:cover;
+        width:@mainWidth;
+        height:400px;
+        position:relative;
+        margin: 90px auto 0;
+        a {
+          display:block;
+          width:100%;
+          height:100%;
+        }
+        .event_txt {
+          position:absolute;
+          width:100%;
+          top:50%;
+          margin-top:-44px;
+          .tit {
+            img{
+              margin: 0 auto;
+            }
+          }
+          .txt {
+            font-size:18px;
+            color:#fff;
+            text-align:center;
+            margin-top:22px;
+            font-weight:300;
+          }
+        }
+      }
+      /*follow us*/
+      .followUs{
+        box-sizing: border-box;
+        padding: 0 40px;
+        width: @mainWidth;
+        height: 200px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .folTxt{
+          color: @mainColor;
+          width: 300px;
+          :first-child{
+            font-weight: bold;
+            font-size: 40px;
+          }
+        }
+        .folLink{
+          width: 700px;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          a{
+            display: block;
+            box-sizing: border-box;
+            padding-top: 3px;
+            width: 200px;
+            height: 50px;
+            background-color: @mainColor;
+            border-radius: 20px;
+            text-align: center;
+            color: #ffffff;
+            transition: .5s;
+            &:hover{
+              box-shadow: 5px 7px 14px 0px #b7a929;
+            }
+            span{
+              vertical-align: middle;
+              &.iconFont {
+                font-family: "iconfont" !important;
+                font-size: 40px;
+                font-style: normal;
+                color: #ffffff;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
+              }
+            }
+          }
+        }
+      }
+      /*store*/
+      .storeWrap{
+        width: @mainWidth;
+        margin: 70px auto;
+        h2{
+          font-weight: bold;
+          color: @mainColor;
+          font-size: 30px;
+        }
+        .store{
+          width: 100%;
+          margin: 20px 0;
+          display: flex;
+          justify-content: space-between;
+          .storeItem{
+            width: 600px;
+            height: 300px;
+
+            a{
+              position: relative;
+              display: block;
+              width: 100%;
+              height: 100%;
+              overflow: hidden;
+              &:hover{
+                img{
+                  transform: scale(1.1);
+                }
+                .storeTxt{
+                  transform: translateY(-60%);
+                }
+                .mask{
+                  display: block;
+                }
+              }
+              img{
+                height: 100%;
+                transition: .5s;
+              }
+              .storeTxt{
+                position: absolute;
+                left: 10px;
+                top: 50%;
+                transform: translateY(-50%);
+                color: #ffffff;
+                transition: .5s;
+                .tit{
+                  font-size: 32px;
+                  font-weight: bold;
+                }
+                .tel{
+                  margin-top: 20px;
+                }
+
+              }
+              .mask{
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0,0,0,.5);
+                display: none;
+              }
+
+            }
+          }
+        }
       }
     }
     /*底部*/
@@ -285,9 +510,10 @@ img{
       width: 100%;
       background-color: @mainColor;
       z-index: 10;
-      height: 40px;
+      height: 0;
       line-height: 40px;
-      transform: translateY(-40px);
+      overflow: hidden;
+      transition: height 1s;
       .fixedNav{
         width: @mainWidth;
         margin: 0 auto;
