--- a/css/myPage/myPage.less
+++ b/css/myPage/myPage.less
@@ -89,7 +89,8 @@ img{
                         text-indent: 30px;
                         border: 1px solid #DEDEDE;
                         &:focus{
-                            border: 1px solid @mainColor;
+                            //border: 1px solid @mainColor;
+                            outline: none;
                         }
                     }
 
@@ -98,14 +99,143 @@ img{
 
         }
     }
-
-    /*填充*/
-    .filling{
+    /*导航*/
+    .navWrap{
         width: 100%;
-        height: 40px;
-        background-color: #E0D03D;
-    }
+        background-color: @mainColor;
+        .navList{
+            position: relative;
+            display: flex;
+            justify-content: space-between;
+            width: @mainWidth;
+            height: 40px;
+            margin: 0 auto;
+            //padding: 5px 0;
+            .navItem{
+                padding: 8px 0;
+                &.navSmall{
+                    position: relative;
+                    .smallList{
+                        position: absolute;
+                        top: 40px;
+                        left: -10px;
+                        width: 114px;
+                        height: 0;
+                        overflow: hidden;
+                        padding: 10px;
+                        box-sizing: border-box;
+                        border: 1px solid @mainColor;
+                        background-color: #ffffff;
+                        opacity: 0;
+                        transition: 1s;
+                        a{
+                            margin-left: 5px;
+                            margin-top: 5px;
+                            display: block;
+                            color: @mainColor;
+                            font-size: 16px;
+                            &:hover{
+                                text-shadow: 2px 2px 1px #b18b26;
+                            }
+                        }
 
+                    }
+                }
+                a{
+                    color: #ffffff;
+                    font-size: 18px;
+                    font-weight: bold;
+                }
+                &:hover{
+                    .text{
+                        text-shadow: 3px 3px 3px #42630e;
+                    }
+                    .itemCon{
+                        height: 355px;
+                        z-index: 5;
+                        opacity: 1;
+                    }
+                    .smallList {
+                        //display: block;
+                        z-index: 5;
+                        height: 200px;
+                        opacity: 1;
+                    }
+                }
+                .itemCon{
+                    position: absolute;
+                    left: 0;
+                    top: 39px;
+                    width: @mainWidth;
+                    height: 0;
+                    padding: 29px;
+                    box-sizing: border-box;
+                    border: 1px solid @mainColor;
+                    background-color: white;
+                    overflow: hidden;
+                    opacity: 0;
+                    transition: 1s;
+                    .itemConText{
+                        float: left;
+                        width: 114px;
+                        height: 300px;
+                        box-sizing: border-box;
+                        a{
+                            margin-left: 5px;
+                            margin-top: 5px;
+                            display: block;
+                            color: @mainColor;
+                            font-size: 16px;
+                            &:hover{
+                                text-shadow: 2px 2px 1px #b18b26;
+                            }
+                        }
+                    }
+                    .itemConImg{
+                        float: left;
+                        width: 300px;
+                        margin-left: 50px;
+                        a{
+                            position: relative;
+                            display: block;
+                            overflow: hidden;
+                            img{
+                                width: 100%;
+                                transition: 1s;
+                            }
+                            span{
+                                position: absolute;
+                                left: 50%;
+                                top: 25%;
+                                transform: translate(-50%,-50%);
+                                font-size: 25px;
+                                font-weight: bold;
+                                color: @mainColor;
+                                z-index: 10;
+                            }
+                            .mask{
+                                position: absolute;
+                                left: 0;
+                                top: 0;
+                                width: 300px;
+                                height: 300px;
+                                background-color: rgba(225,225,225,.4);
+                                display: none;
+                            }
+                            &:hover {
+                                .mask{
+                                    display: block;
+                                }
+                                img{
+                                    transform: scale(1.4) rotate(10deg);
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
     /*我页*/
     .myWrap{
         width: 1226px;
@@ -292,7 +422,6 @@ img{
         }
 
     }
-
     /*底部*/
     .footerWrap{
         width: 100%;
@@ -325,6 +454,82 @@ img{
                     color: #d8cccc;
                 }
 
+            }
+        }
+    }
+    /*回到顶部*/
+    .toTop{
+        position: fixed;
+        bottom: 0;
+        right: 0px;
+        height: 50px;
+        width: 50px;
+        background-color: @mainColor;
+        color: #ffffff;
+        font-size: 30px;
+        line-height: 50px;
+        text-align: center;
+        &:hover{
+            background-color:  #f8f96d;
+        }
+    }
+    /*fixed导航*/
+    .fixedNavWrap{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background-color: @mainColor;
+        z-index: 10;
+        height: 0;
+        line-height: 40px;
+        overflow: hidden;
+        transition: height 1s;
+        .fixedNav{
+            width: @mainWidth;
+            margin: 0 auto;
+            font-size: 14px;
+            .fixedNavListLeft{
+                width: 400px;
+                float: left;
+                display: flex;
+                justify-content: space-between;
+                li{
+                    a{
+                        font-weight: bold;
+                        color: #ffffff;
+                    }
+                }
+            }
+            .fixedNavListMiddle{
+                float: left;
+                margin-left: 50px;
+                font-style: italic;
+                li:first-child{
+                    float: left;
+                    a{
+                        color: #ffffff;
+                    }
+                }
+                li:last-child{
+                    float: left;
+                    margin-left: 14px;
+                    a{
+                        color: #ec3434;
+                        text-decoration: underline;
+                    }
+                }
+            }
+            .fixedNavListRight {
+                width: 100px;
+                float: right;
+                display: flex;
+                justify-content: space-between;
+                li {
+                    a {
+                        color: #ffffff;
+                    }
+                }
             }
         }
     }
